# image-classification-with-lightning

./: README.md  pyproject.toml
conf/: config.yaml
conf/datamodule/: cifar10.yaml  mnist.yaml
conf/experiment/: cifar10_conv.yaml  mnist_conv.yaml  mnist_simple.yaml
conf/litmodule/: cifar10_conv.yaml  mnist_conv.yaml  mnist_simple.yaml
conf/trainer/: default.yaml
src/: print_config.py  test.py  train.py
src/callback/: __init__.py  model_checkpoint_with_logging.py
src/datamodule/: __init__.py  cifar10_datamodule.py  mnist_datamodule.py
src/litmodule/: __init__.py  lit_multiclass_classifier.py
src/model/: __init__.py  conv_net.py  simple_dense_net.py
